<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_PlcErrorStartUp" Id="{b924b393-234e-4a5e-9c9d-f8291fea4e12}">
    <Declaration><![CDATA[TYPE ST_PlcErrorStartUp :
STRUCT
	bPlcError		: BOOL;
	bErrorCode		: ARRAY[1..4] OF UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>